--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:8+kbHoIZWSoFLShfnhZKZt/FT5vAOxITECzulWw+uow=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,9 +11,11 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=user_db
+DB_USERNAME=utsho
+DB_PASSWORD=123
+
+STATIC_API_TOKEN=123456blogposting
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
